infra/kube/apps/test_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test_app
  namespace: test_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test_app
  template:
    metadata:
      labels:
        app: test_app
    spec:
      containers:
      - name: test
        image: hashicorp/http-echo
        args:
          - "-text=Hello to hataraki assistant! 🚀"
          - "-listen=:8080"
        ports:
        - containerPort: 8080
