infra/kube/apps/test_app/service.yaml
---
# Service for the app
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test-app
spec:
  selector:
    app: test-app
  ports:
  - port: 80
    targetPort: 8080
