infra/kube/apps/test_app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app
  namespace: test-app
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "test.hatarakiassistant.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: test-app
      port: 80
